# Eclipse

./: .gitignore  Cargo.toml  README.md
examples/: hover.rs
src/: main.rs
src/aero/: airdata.rs  atmosphere.rs  forces.rs  mod.rs  propeller.rs  wing.rs
src/config/: aircraft.rs  mod.rs  simulation.rs
src/control/: autopilot.rs  autopilot_lqg.rs  autopilot_lqr.rs  autopilot_stable.rs  autopilot_v2.rs  control_allocation.rs  flight_mode.rs  gain_schedule.rs  kalman.rs  lqr.rs  lqr_tuning.rs  mod.rs  pid.rs  qp_allocation.rs  sysid.rs  transition_manager.rs
src/math/: frame.rs  mod.rs  quaternion.rs  vector.rs
src/physics/: frames.rs  integrator.rs  mod.rs  rigid_body.rs
src/power/: mod.rs
src/prop/: disk.rs
src/sim/: aircraft.rs  disturbances.rs  mod.rs  simulator.rs  visualization.rs
