[package]
name = "eclipse"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[dependencies.bevy]
version = "0.15"
default-features = false
features = ["bevy_winit", "bevy_render", "x11"]
optional = true

[features]
default = []
visualization = ["bevy"]

[profile.dev]
opt-level = 2

[profile.release]
lto = true
codegen-units = 1
